--- a/src/ReservaAFS.Exception/ResourceErrorMessages.pt-br.resx
+++ b/src/ReservaAFS.Exception/ResourceErrorMessages.pt-br.resx
@@ -118,12 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DESCRIPTION_INVALID" xml:space="preserve">
-    <value>Descrição é obrigatória</value>
+    <value>Descrição é obrigatória.</value>
   </data>
   <data name="RESERVES_CANNOT_PAST" xml:space="preserve">
-    <value>Reservas não podem ser para o passado</value>
+    <value>Reservas não podem ser para o passado.</value>
   </data>
   <data name="RESERVE_TYPE_INVALID" xml:space="preserve">
-    <value>Recurso reservado é inválido</value>
+    <value>Recurso reservado é inválido.</value>
+  </data>
+  <data name="THROW_UNKNOW_ERROR" xml:space="preserve">
+    <value>Erro desconhecido.</value>
   </data>
 </root>
