--- a/src/ReservaAFS.Exception/ResourceErrorMessages.resx
+++ b/src/ReservaAFS.Exception/ResourceErrorMessages.resx
@@ -118,12 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DESCRIPTION_INVALID" xml:space="preserve">
-    <value>Description is required</value>
+    <value>Description is required.</value>
   </data>
   <data name="RESERVES_CANNOT_PAST" xml:space="preserve">
-    <value>Reserves cannot be for the past</value>
+    <value>Reserves cannot be for the past.</value>
   </data>
   <data name="RESERVE_TYPE_INVALID" xml:space="preserve">
-    <value>Reserved resource is invalid</value>
+    <value>Reserved resource is invalid.</value>
+  </data>
+  <data name="THROW_UNKNOW_ERROR" xml:space="preserve">
+    <value>Unknow error.</value>
   </data>
 </root>
