--- a/src/ReservaAFS.Exception/ResourceErrorMessages.pt-br.resx
+++ b/src/ReservaAFS.Exception/ResourceErrorMessages.pt-br.resx
@@ -123,6 +123,9 @@
   <data name="RESERVES_CANNOT_PAST" xml:space="preserve">
     <value>Reservas não podem ser para o passado.</value>
   </data>
+  <data name="RESERVE_NOT_FOUND" xml:space="preserve">
+    <value>Reserva não encontrada.</value>
+  </data>
   <data name="RESERVE_TYPE_INVALID" xml:space="preserve">
     <value>Recurso reservado é inválido.</value>
   </data>
